--- a/InventarioProj/InventarioApp/templates/gestionInv.html
+++ b/InventarioProj/InventarioApp/templates/gestionInv.html
@@ -1,10 +1,56 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>Página Inventario por Jorge Feliz</h1>
-</body>
-</html>
+{% extends './base.html' %}
+{% block title %} Gestion de Inventario {% endblock %}
+{% block body %}
+
+<div class="row">
+    <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
+    <h2>Inventario</h2>
+        <div class="card py-2" >
+            <div class="card-body">
+                <form action="" method="post">
+                    <div class="form-group">
+                        <input type="text" id="txtCodigo" name="txtCodigo" class="form-control" placeholder="Código"
+                               minlength="3" maxlength="10" required>
+                    </div>
+                    <div class="form-group py-2">
+                        <input type="text" id="txtArticulo" name="txtArticulo" class="form-control" placeholder="Artículo" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" id="txtCantidad" name="txtCantidad" class="form-control" min="1" value="0" required>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-success btn-block text-white">Guardar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-sm-12 col-md-6 col-lg-8 col-xl-8">
+        <h1>Listado de Artículos</h1>
+        <div class="table-responsive py-2">
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th>Código</th>
+                    <th>Artículo</th>
+                    <th>Cantidad</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for i in inventario %}
+                <tr>
+                    <td>{{i.codigo}}</td>
+                    <td>{{i.articulo}}</td>
+                    <td>{{i.cantidad}}</td>
+                </tr>
+                {% endfor %}
+                </tbody>
+
+            </table>
+        </div>
+    </div>
+
+</div>
+
+{% endblock %}
