--- a/InventarioProj/InventarioApp/templates/gestionInv.html
+++ b/InventarioProj/InventarioApp/templates/gestionInv.html
@@ -4,7 +4,7 @@
 
 <div class="row">
     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
-    <h2>Inventario</h2>
+    <h2>Inventario de Partes</h2>
         <div class="card py-2" >
             <div class="card-body">
                 <form action="registrar" method="post"> {% csrf_token %}
@@ -32,17 +32,22 @@
             <table class="table table-striped">
                 <thead>
                 <tr>
+                    <th>#</th>
                     <th>Código</th>
                     <th>Artículo</th>
                     <th>Cantidad</th>
+                    <th colspan="2">Opciones</th>
                 </tr>
                 </thead>
                 <tbody>
                 {% for i in inventario %}
                 <tr>
+                    <td>{{forloop.counter}}</td>
                     <td>{{i.codigo}}</td>
                     <td>{{i.articulo}}</td>
                     <td>{{i.cantidad}}</td>
+                    <td><a href="editar/{{i.codigo}}" class="btn btn-info">Editar</a> </td>
+                    <td><a href="eliminar/{{i.codigo}}" class="btn btn-danger">Eliminar</a> </td>
                 </tr>
                 {% endfor %}
                 </tbody>
