--- a/InventarioProj/InventarioApp/templates/gestionInv.html
+++ b/InventarioProj/InventarioApp/templates/gestionInv.html
@@ -4,6 +4,14 @@
 
 <div class="row">
     <div class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
+        {% if messages %}
+        {% for message in messages %}
+        <div class="alert alert-dismissible alert-success">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <strong class="text-dark">{{ message }}</strong>
+        </div>
+        {% endfor %}
+        {% endif %}
     <h2>Inventario de Partes</h2>
         <div class="card py-2" >
             <div class="card-body">
@@ -47,7 +55,7 @@
                     <td>{{i.articulo}}</td>
                     <td>{{i.cantidad}}</td>
                     <td><a href="editar/{{i.codigo}}" class="btn btn-info">Editar</a> </td>
-                    <td><a href="eliminar/{{i.codigo}}" class="btn btn-danger">Eliminar</a> </td>
+                    <td><a href="eliminar/{{i.codigo}}" class="btn btn-danger btnEliminar">Eliminar</a> </td>
                 </tr>
                 {% endfor %}
                 </tbody>
