--- a/InventarioProj/InventarioApp/templates/base.html
+++ b/InventarioProj/InventarioApp/templates/base.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 </nav>
-<div class="container py-4">
+<div class="container-fluid py-4">
     {% block body %}
 
     {% endblock %}
