--- a/InventarioProj/InventarioApp/templates/editar.html
+++ b/InventarioProj/InventarioApp/templates/editar.html
@@ -21,6 +21,9 @@
                             value="1" required>
                     </div>
                     <div class="form-group">
+                        <input type="text" id="txtUbicacion" name="txtUbicacion" value="{{i.ubicacion}}" class="form-control" placeholder="Ubicación">
+                    </div>
+                    <div class="form-group">
                         <button type="submit" class="btn btn-success btn-block text-white">Guardar</button>
                     </div>
                 </form>
