--- a/InventarioProj/InventarioApp/templates/gestionInv.html
+++ b/InventarioProj/InventarioApp/templates/gestionInv.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 <div class="row">
-    <div class="col">
+    <div class="col-sm-12 col-md-4 col-lg-2 col-xl-2 py-4">
         {% if messages %}
         {% for message in messages %}
         <div class="alert alert-dismissible alert-success">
@@ -13,7 +13,7 @@
         {% endfor %}
         {% endif %}
     <h2>Inventario de Partes</h2>
-        <div class="card py-2" >
+        <div class="card py-2">
             <div class="card-body">
                 <form action="registrar" method="post"> {% csrf_token %}
                     <div class="form-group">
@@ -27,6 +27,9 @@
                         <input type="text" id="txtCantidad" name="txtCantidad" class="form-control" min="1" value="0" required>
                     </div>
                     <div class="form-group">
+                        <input type="text" id="txtUbicacion" name="txtUbicacion" class="form-control" placeholder="Ubicación">
+                    </div>
+                    <div class="form-group">
                         <button type="submit" class="btn btn-success btn-block text-white">Guardar</button>
                     </div>
                 </form>
@@ -34,7 +37,7 @@
         </div>
     </div>
 
-    <div class="col" >
+    <div class="col-sm-12 col-md-8 col-lg-10 col-xl-10">
         <h1>Listado de Artículos</h1>
         <div class="table-responsive py-2">
             <table class="table table-striped">
@@ -44,6 +47,7 @@
                     <th>Código</th>
                     <th>Artículo</th>
                     <th>Cantidad</th>
+                    <th>Ubicación</th>
                     <th>Fec_creación</th>
                     <th>Fec_actualización</th>
                     <th colspan="2">Opciones</th>
@@ -56,6 +60,7 @@
                     <td>{{i.codigo}}</td>
                     <td>{{i.articulo}}</td>
                     <td>{{i.cantidad}}</td>
+                    <td>{{i.ubicacion}}</td>
                     <td>{{i.fecha_creacion|date:"d M, Y"}}</td>
                     <td>{{i.fecha_actualizacion|date:"d M, Y"}}</td>
 
