--- a/InventarioProj/InventarioApp/templates/editar.html
+++ b/InventarioProj/InventarioApp/templates/editar.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 <div class="row">
-    <div class="col-md-4 offset-md-4">
+    <div class="col-md-4 col-lg-3 offset-md-4">
         <h2>Editar Inventario</h2>
         <div class="card">
             <div class="card-body">
