--- a/InventarioProj/InventarioApp/templates/editar.html
+++ b/InventarioProj/InventarioApp/templates/editar.html
@@ -7,7 +7,7 @@
         <h2>Editar Inventario</h2>
         <div class="card">
             <div class="card-body">
-                <form action="/editarInv/" method="POST">{% csrf_token %}
+                <form action="/editarInv/" method="POST" enctype="multipart/form-data">{% csrf_token %}
                     <div class="form-group">
                         <input type="text" id="txtCodigo" name="txtCodigo" value="{{i.codigo}}" class="form-control" placeholder="Código"
                             minlength="3" maxlength="10" readonly required>
@@ -22,6 +22,10 @@
                     </div>
                     <div class="form-group">
                         <input type="text" id="txtUbicacion" name="txtUbicacion" value="{{i.ubicacion}}" class="form-control" placeholder="Ubicación">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlFile1">Imagen</label>
+                        <input type="file" class="form-control-file" name="image" value="{{i.imagen.url}}" id="exampleFormControlFile1">
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-success btn-block text-white">Guardar</button>
