--- a/InventarioProj/InventarioApp/templates/base.html
+++ b/InventarioProj/InventarioApp/templates/base.html
@@ -13,15 +13,15 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">InventApp</a>
+    <a class="navbar-brand" href="{% url 'inventApp' %}">InventApp</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="navbar-collapse collapse w-100 order-1-md-0 dual-collapse2" id="navbarNav">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Articles</a></li>
-            <li class="nav-item"><a class="nav-link active" href="#">About</a></li>
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'home' %}">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link active" href="{% url 'about' %}">Acerca de</a></li>
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
