--- a/InventarioProj/InventarioApp/templates/editar.html
+++ b/InventarioProj/InventarioApp/templates/editar.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="form-group">
                         <label for="exampleFormControlFile1">Imagen</label>
-                        <input type="file" class="form-control-file" name="image" value="{{i.imagen.url}}" id="exampleFormControlFile1">
+                        <input type="file" class="form-control-file" name="image" {% if i.imagen %} value="{{i.imagen.url}}" {%endif%} id="exampleFormControlFile1">
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-success btn-block text-white">Guardar</button>
