--- a/InventarioProj/InventarioApp/templates/home.html
+++ b/InventarioProj/InventarioApp/templates/home.html
@@ -2,10 +2,14 @@
 {% block title %} Gestion de Inventario {% endblock %}
 {% block body %}
 
+<style>
+    body{ background-image: url("/static/bg.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+</style>
 
-<p>
-    <h1>Página de inicio</h1>
-</p>
+<h1><p>Bienvenidos a InventApp</p></h1>
 
 
 {% endblock %}
