--- a/InventarioProj/InventarioApp/templates/base.html
+++ b/InventarioProj/InventarioApp/templates/base.html
@@ -27,7 +27,7 @@
             <li class="nav-item">
 
             </li>
-            <li class="nav-item"><a class="nav-link active" href="#">Iniciar sesión</a></li>
+            <li class="nav-item"><a class="nav-link btn btn-success active" href="#">Iniciar sesión</a></li>
             <li class="nav-item"><a class="nav-link active" href="#">Cerrar sesión</a></li>
         </ul>
 
@@ -38,6 +38,7 @@
     {% block body %}
 
     {% endblock %}
+
 </div>
 
 
@@ -47,6 +48,7 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 <script src="{% static 'js/gestion.js' %}"></script>
+
 
 </body>
 </html>
