--- a/InventarioProj/InventarioApp/templates/about.html
+++ b/InventarioProj/InventarioApp/templates/about.html
@@ -2,10 +2,93 @@
 {% block title %} Gestion de Inventario {% endblock %}
 {% block body %}
 
+<h1>Herramientas Libre utilizadas</h1>
 
-<p>
-    <h1>Acerca de</h1>
-</p>
+<div class="container py-4">
+        <div class="row">
+        <div class="col-12 col-md-6 col-lg-3 p-2">
+            <div class="card border-secondary h-100">
+                <img src="/static/img/python.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Pyton 3.11</h5>
+                    <p class="card-text">Lenguaje de programación Python versión 3.11</p>
+                </div>
 
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3 p-2">
+            <div class="card border-secondary h-100">
+                <img src="/static/img/django.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Django</h5>
+                    <p class="card-text">Django 4. Bajo licencia 3-clause BSD.</p>
+                </div>
+            </div>
+
+        </div>
+        <div class="col-12 col-md-6 col-lg-3 p-2">
+            <div class="card border-secondary h-100">
+                <img src="/static/img/html.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">HTML</h5>
+                    <p class="card-text">HyperText Markup Language</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3 p-2">
+            <div class="card border-secondary h-100">
+                <img src="/static/img/css.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">CSS 3</h5>
+                    <p class="card-text">Cascading Style Sheet</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-3 p-2">
+            <div class="card border-secondary h-100">
+                <img src="/static/img/js.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">JavaScript</h5>
+                    <p class="card-text">Lenguaje de programación orientado a la Web.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-3 p-2">
+            <div class="card border-secondary h-100">
+                <img src="/static/img/pycharm.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">PyCharm</h5>
+                    <p class="card-text">PyCharm Community Edition. Bajo licencia Open Source.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-3 p-2">
+            <div class="card border-secondary h-100">
+                <img src="/static/img/git.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Git</h5>
+                    <p class="card-text">Es un Software para el control de versiones. Se rige bajo la licencia GPL-2.0-only</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-lg-3 p-2">
+            <div class="card border-secondary h-100">
+                <img src="/static/img/monday.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Monday</h5>
+                    <p class="card-text">Es un gestor de proyectos de uso gratuito y de pago.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<footer>
+    <b><div class="float-end">Creado por Jorge Feliz para UAPA</div></b>
+</footer>
 
 {% endblock %}
