--- a/InventarioProj/InventarioApp/templates/gestionInv.html
+++ b/InventarioProj/InventarioApp/templates/gestionInv.html
@@ -75,8 +75,19 @@
                         {%endif%}</a> </td>
 
 <!--                                Botones Editar y eliminar-->
+                    {% if user.is_superuser %}
                     <td><a href="editar/{{i.codigo}}" class="btn btn-info">Editar</a> </td>
                     <td><a href="eliminar/{{i.codigo}}" class="btn btn-danger btnEliminar">Eliminar</a> </td>
+                    {% else %}
+                    <td>
+                    <span class="d-inline-block" tabindex="0" data-bs-toggle="tooltip" title="Solo un admin puede editar">
+                    <a href="editar/{{i.codigo}}" class="btn btn-info disabled">Editar</a>
+                    </span></td>
+                    <td>
+                        <span class="d-inline-block" tabindex="0" data-bs-toggle="tooltip" title="Solo un admin puede eliminar">
+                            <a href="eliminar/{{i.codigo}}" class="btn btn-danger btnEliminar disabled">Eliminar</a> </span>
+                    </td>
+                    {% endif %}
                 </tr>
 
                 {% endfor %}
