--- a/InventarioProj/autenticarse/templates/login.html
+++ b/InventarioProj/autenticarse/templates/login.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends './base.html' %}
+{% block title %} Gestion de Inventario {% endblock %}
+{% load crispy_forms_tags %}
+{% block body %}
 
-</body>
-</html>
+
+<form method="post" action="" >
+
+    {% csrf_token %}
+
+    <div class="container col-sm-6 col-lg-3 col-md-3 py-4" >
+        {{form|crispy}}
+
+        {% if messages %}
+
+        {% for mensaje in messages %}
+            <!-- <span class="alert alert-{{mensaje.tags}}">*{{mensaje}}</span>  -->
+            <span style="color: darkred ;">*{{mensaje}}</span>
+
+        {% endfor %}
+
+        {% endif %}
+
+    <br/> <button type="submit" class="btn btn-success">Login</button>
+    </div>
+
+</form>
+
+{% endblock %}
