--- a/InventarioProj/autenticarse/templates/registro.html
+++ b/InventarioProj/autenticarse/templates/registro.html
@@ -1,10 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends './base.html' %}
+{% block title %} Gestion de Inventario {% endblock %}
+{% load crispy_forms_tags %}
+{% block body %}
 
-</body>
-</html>
+<form method="post" action="">
+
+    {% csrf_token %}
+
+    <div class="container col-sm-6 col-lg-3 col-md-3 py-4">
+        {{form|crispy}}
+
+        <button type="submit" class="btn btn-success">Registrarse</button>
+    </div>
+
+</form>
+
+
+
+{% endblock %}
